# open-watch

./: .gitignore  CHANGELOG.md  LICENSE.txt  README-demo.md  README.md
.github/: FUNDING.yml
Hardware/: Bluetooth.SchDoc  Buzzer.SchDoc  Charger.SchDoc  GyroMPU.SchDoc  MCU.SchDoc  OLED.SchDoc  Touch.SchDoc  Viberation.SchDoc  Watch.PrjPcb  main.SchDoc  main2.SchDoc  watch_pcb.PcbDoc
my_watch_software/: .mxproject  my_watch_software.ioc
open-watch-android-app/: README.md
open-watch-android-app/OpenWatch/app/src/main/jni/: CMakeLists.txt  android.cpp
open-watch-android-app/OpenWatch/app/src/main/jni/ppg/: PPG_Algorithm.cpp  PPG_Algorithm.h  PPG_Algorithm_data.cpp  PPG_Algorithm_data.h  PPG_Algorithm_initialize.cpp  PPG_Algorithm_initialize.h  PPG_Algorithm_internal_types.h  PPG_Algorithm_terminate.cpp  PPG_Algorithm_terminate.h  PPG_Algorithm_types.h  _clang-format  buildInfo.mat  ceil.cpp  ceil.h  coder_array.h  coder_bounded_array.h  coder_cs.h  cs.h  cs_ci_bundle.cpp  cs_ri_bundle.cpp  diff.cpp  diff.h  eml_rand_mt19937ar_stateful.cpp  eml_rand_mt19937ar_stateful.h  filter.cpp  filter.h  filtfilt.cpp  filtfilt.h  heapsort.cpp  heapsort.h  insertionsort.cpp  insertionsort.h  introsort.cpp  introsort.h  makeCXSparseMatrix.cpp  makeCXSparseMatrix.h  mean.cpp  mean.h  minOrMax.cpp  minOrMax.h  (+20 more)
open-watch-firmware/: README.md
open-watch-hardware/: Bluetooth.SchDoc  Buzzer.SchDoc  Charger.SchDoc  GyroMPU.SchDoc  MAX30102.SchDoc  MCU.SchDoc  OLED.SchDoc  README.md  Touch.SchDoc  UART.SchDoc  Viberation.SchDoc  Watch.PrjPcb  main.SchDoc
(+242 files in other folders)
